# django-mongodb-mql-panel

./: .gitignore  README.md  pyproject.toml  requirements.txt
world_cup/: models.py  views.py
